--- a/ai_optimization_saes_en.ipynb
+++ b/ai_optimization_saes_en.ipynb
@@ -4,11 +4,12 @@
    "cell_type": "markdown",
    "metadata": {
     "tags": [
-     "meta"
+     "meta",
+     "draft"
     ]
    },
    "source": [
-    "# Self-adaptive Evolution Strategy (SAES)"
+    "# Self-Adaptive Evolution Strategy (SAES)"
    ]
   },
   {
@@ -19,11 +20,9 @@
     ]
    },
    "source": [
-    "$\\newcommand{\\R}{\\mathbb{R}}$\n",
-    "$\\newcommand{\\E}{\\mathbb{E}}$\n",
-    "\n",
-    "$\\newcommand{\\vs}[1]{\\boldsymbol{#1}}$\n",
-    "$\\newcommand{\\ms}[1]{\\boldsymbol{#1}}$"
+    "**TODO**:\n",
+    "* http://www.scholarpedia.org/article/Evolution_strategies\n",
+    "* [Matlab / mathematica implementation](https://homepages.fhv.at/hgb/downloads.html)"
    ]
   },
   {
@@ -37,19 +36,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following algorithm ${\\cal{N}}$ denotes some independent standard Gaussian random variable, with dimension as required in equations above.\n",
+    "**Notations**:\n",
+    "* ${\\cal{N}}$ denotes some independent standard Gaussian random variable\n",
+    "* $d$ is the dimension of input vectors, $d \\in \\mathbb{N}^*_+$\n",
+    "* $n$ is the current iteration index (or generation index), $n \\in \\mathbb{N}^*_+$\n",
     "\n",
     "---\n",
     "\n",
-    "**Parameters:**\n",
-    "$K>0$,\n",
-    "$\\zeta\\geq 0$,\n",
-    "$\\lambda>\\mu>0$\n",
-    "and a dimension $d>0$.\n",
+    "**Algorithm's parameters:**\n",
+    "* $K > 0$,\n",
+    "* $\\zeta \\geq 0$,\n",
+    "* $\\lambda > \\mu > 0$\n",
+    "\n",
+    "---\n",
     "\n",
     "**Input:**\n",
-    "an initial parent population $x_{1,i} \\in \\R^d$\n",
-    "and an initial $\\sigma_{1,i} = 1$ with $i \\in \\{1, \\dots, \\mu \\}$.\n",
+    "* an initial parent population $\\boldsymbol{x}_{1,i} \\in \\mathbb{R}^d$\n",
+    "* an initial scalar $\\sigma_{1,i} = 1$ with $i \\in \\{1, \\dots, \\mu \\}$\n",
     "\n",
     "---\n",
     "\n",
@@ -61,7 +64,7 @@
     "    \n",
     "\\begin{eqnarray}\n",
     "    \\sigma_j & = & \\sigma_{n, mod(j-1, \\mu) + 1} \\times \\exp\\left( \\frac{1}{2d} \\cal{N} \\right) \\\\\n",
-    "    i_j      & = & \\vs{x}_{n, mod(j-1, \\mu) + 1} + \\sigma_j \\cal{N}.\n",
+    "    i_j      & = & \\boldsymbol{x}_{n, mod(j-1, \\mu) + 1} + \\sigma_j \\cal{N}.\n",
     "\\end{eqnarray}\n",
     "    \n",
     "$\\quad$ Evaluate each of them $\\lceil Kn^\\zeta \\rceil$ times and average their fitness values\n",
@@ -69,16 +72,16 @@
     "$\\quad$ Define $j_1, \\dots, j_{\\lambda}$ so that\n",
     "\n",
     "$$\n",
-    "\\E_{\\lceil Kn^\\zeta \\rceil}[f(i_{j_1})]\\leq \\E_{\\lceil Kn^\\zeta \\rceil}[f(i_{j_2})] \\leq \\dots \\leq \\E_{\\lceil Kn^\\zeta \\rceil}[f(i_{j_{\\lambda}})]\n",
+    "\\mathbb{E}_{\\lceil Kn^\\zeta \\rceil}[f(i_{j_1})]\\leq \\mathbb{E}_{\\lceil Kn^\\zeta \\rceil}[f(i_{j_2})] \\leq \\dots \\leq \\mathbb{E}_{\\lceil Kn^\\zeta \\rceil}[f(i_{j_{\\lambda}})]\n",
     "$$\n",
     "\n",
-    "$\\quad$ where $\\E_m$ denotes a sample average over $m$ resamplings.\n",
+    "$\\quad$ where $\\mathbb{E}_m$ denotes a sample average over $m$ resamplings.\n",
     "\n",
-    "$\\quad$ Update: compute $\\vs{x}_{n+1, k}$ and $\\sigma_{n+1, k}$ using\n",
+    "$\\quad$ Update: compute $\\boldsymbol{x}_{n+1, k}$ and $\\sigma_{n+1, k}$ using\n",
     "\n",
     "\\begin{eqnarray}\n",
     "\\sigma_{n+1,k}   &=& \\sigma_{j_{k}}, \\quad k \\in \\{1, \\dots, \\mu\\}\\\\\n",
-    "{\\vs{x}_{n+1,k}} &=& i_{j_{k}},      \\quad k \\in \\{1, \\dots, \\mu\\}\n",
+    "{\\boldsymbol{x}_{n+1,k}} &=& i_{j_{k}},      \\quad k \\in \\{1, \\dots, \\mu\\}\n",
     "\\end{eqnarray}\n",
     "\n",
     "$\\quad$ $n\\leftarrow n+1$\n",
@@ -275,6 +278,7 @@
     "from pyai.optimize.utils import plot_contour_2d_solution_space\n",
     "from pyai.optimize.utils import plot_2d_solution_space\n",
     "\n",
+    "from pyai.optimize.utils import array_list_to_array\n",
     "from pyai.optimize.utils import plot_fx_wt_iteration_number\n",
     "from pyai.optimize.utils import plot_err_wt_iteration_number\n",
     "from pyai.optimize.utils import plot_err_wt_execution_time\n",
@@ -310,7 +314,15 @@
    "source": [
     "# Set the objective function\n",
     "#from pyai.optimize.functions import sphere as func\n",
-    "from pyai.optimize.functions import sphere2d as func"
+    "from pyai.optimize.functions import sphere2d as func\n",
+    "#from pyai.optimize.functions import additive_gaussian_noise as noise\n",
+    "from pyai.optimize.functions import multiplicative_gaussian_noise as noise\n",
+    "#from pyai.optimize.functions import additive_poisson_noise as noise\n",
+    "\n",
+    "func.noise = noise      # Comment this line to use a deterministic objective function\n",
+    "\n",
+    "xmin = func.bounds[0]   # TODO\n",
+    "xmax = func.bounds[1]   # TODO"
    ]
   },
   {
@@ -319,22 +331,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "saes = SAES()\n",
-    "res = saes.minimize(func)"
+    "\n",
+    "func.do_eval_logs = True\n",
+    "func.reset_eval_counters()\n",
+    "func.reset_eval_logs()\n",
+    "\n",
+    "res = saes.minimize(func)\n",
+    "\n",
+    "func.do_eval_logs = False\n",
+    "\n",
+    "eval_x_array = np.array(func.eval_logs_dict['x']).T\n",
+    "eval_error_array = np.array(func.eval_logs_dict['fx']) - func(func.arg_min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_contour_2d_solution_space(func,\n",
+    "                               xmin=xmin,\n",
+    "                               xmax=xmax,\n",
+    "                               xstar=res,\n",
+    "                               xvisited=eval_x_array,\n",
+    "                               title=\"SAES\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_err_wt_num_feval(eval_error_array, x_log=True, y_log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "eval_error_array_list = []\n",
+    "\n",
+    "NUM_RUNS = 100\n",
+    "\n",
+    "for run_index in range(NUM_RUNS):\n",
+    "    saes = SAES()\n",
+    "\n",
+    "    func.do_eval_logs = True\n",
+    "    func.reset_eval_counters()\n",
+    "    func.reset_eval_logs()\n",
+    "\n",
+    "    res = saes.minimize(func)\n",
+    "\n",
+    "    func.do_eval_logs = False\n",
+    "\n",
+    "    eval_error_array = np.array(func.eval_logs_dict['fx']) - func(func.arg_min)\n",
+    "\n",
+    "    print(\"x* =\", res)\n",
+    "    \n",
+    "    eval_error_array_list.append(eval_error_array);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_err_wt_num_feval(array_list_to_array(eval_error_array_list), x_log=True, y_log=True, plot_option=\"mean\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Octave/Matlab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "An external Octave (Matlab) implementation is available there: https://homepages.fhv.at/hgb/downloads/mu_mu_I_lambda-ES.oct."
+    "### Octave/Matlab\n",
+    "\n",
+    "An external Octave (Matlab) implementation is available there: https://homepages.fhv.at/hgb/downloads/mu_mu_I_lambda-ES.oct.\n",
+    "\n",
+    "### Mathematica\n",
+    "\n",
+    "An external Mathematica implementation is available there: https://homepages.fhv.at/hgb/downloads/mu_mu_I_lambda-ES.mat"
    ]
   }
  ],
