--- a/ai_optimization_differential_evolution_fr.ipynb
+++ b/ai_optimization_differential_evolution_fr.ipynb
@@ -72,11 +72,11 @@
     "\n",
     "$\\quad\\quad$ 2. **CROISEMENT**:\n",
     "\n",
-    "$\\quad\\quad\\quad$ on crée un individu \"test\" dont les composantes sont aléatoirement prises soit dans $\\boldsymbol{x}_i$ soit dans $\\boldsymbol{v}_i$\n",
+    "$\\quad\\quad\\quad$ on crée un individu \"test\" $\\boldsymbol{u}_{i}$ dont les composantes sont aléatoirement prises soit dans $\\boldsymbol{x}_i$ soit dans $\\boldsymbol{v}_i$\n",
     "\n",
     "$\\quad\\quad$ 3. **SELECTION**:\n",
     "\n",
-    "$\\quad\\quad\\quad$ si $\\boldsymbol{v}_{i}$ est meilleur que $\\boldsymbol{x}_{i}$, il le remplace à la génération suivante."
+    "$\\quad\\quad\\quad$ si cet individu test $\\boldsymbol{u}_{i}$ est meilleur que $\\boldsymbol{x}_{i}$, il le remplace à la génération suivante."
    ]
   },
   {
@@ -172,6 +172,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "tags": [
      "hide"
     ]
