Rewrite the Python implementation.

--- a/ai_optimization_saes_en.ipynb
+++ b/ai_optimization_saes_en.ipynb
@@ -22,7 +22,11 @@
    "source": [
     "**TODO**:\n",
     "* http://www.scholarpedia.org/article/Evolution_strategies\n",
-    "* [Matlab / mathematica implementation](https://homepages.fhv.at/hgb/downloads.html)"
+    "* [Matlab / mathematica implementation](https://homepages.fhv.at/hgb/downloads.html)\n",
+    "* https://en.wikipedia.org/wiki/Evolution_strategy\n",
+    "* https://en.wikipedia.org/wiki/Evolution_window\n",
+    "\n",
+    "* http://deap.readthedocs.io/en/master/index.html"
    ]
   },
   {
@@ -34,8 +38,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
+    "**TODO: this is wrong, redo this section !**\n",
+    "\n",
     "**Notations**:\n",
     "* ${\\cal{N}}$ denotes some independent standard Gaussian random variable\n",
     "* $d$ is the dimension of input vectors, $d \\in \\mathbb{N}^*_+$\n",
@@ -104,10 +114,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "outputs": [],
    "source": [
-    "The following implementation has been taken from there: https://github.com/jeremiedecock/pyai/blob/a61a866ead261e470785cc02c9d5aa6deeac80ee/pyai/optimization/standalone_implementations/saes/saes.py."
+    "# Init matplotlib\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['figure.figsize'] = (8, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Setup PyAI\n",
+    "import sys\n",
+    "sys.path.insert(0, '/Users/jdecock/git/pub/jdhp/pyai')"
    ]
   },
   {
@@ -116,90 +152,198 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!/usr/bin/env python\n",
+    "# Set the objective function\n",
+    "#from pyai.optimize.functions import sphere as func\n",
+    "from pyai.optimize.functions import sphere2d as func\n",
+    "#from pyai.optimize.functions import additive_gaussian_noise as noise\n",
+    "from pyai.optimize.functions import multiplicative_gaussian_noise as noise\n",
+    "#from pyai.optimize.functions import additive_poisson_noise as noise\n",
+    "\n",
+    "#func.noise = noise      # Comment this line to use a deterministic objective function\n",
+    "\n",
+    "xmin = func.bounds[0]   # TODO\n",
+    "xmax = func.bounds[1]   # TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (1+1)-$\\sigma$-Self-Adaptation-ES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
     "\n",
     "\"\"\"\n",
-    "This is a simple Python implementation of the (mu/mu_I, lambda)-sigmaSA-ES\n",
+    "This is a simple Python implementation of the (mu/1, lambda)-sigmaSA-ES\n",
     "as discussed in \n",
     "http://www.scholarpedia.org/article/Evolution_Strategies\n",
-    "Based on\n",
-    "https://homepages.fhv.at/hgb/downloads/mu_mu_I_lambda-ES.oct\n",
     "\"\"\"\n",
     "\n",
-    "import math\n",
-    "import numpy as np\n",
+    "mu = 3   # mu: the number of parents\n",
+    "lmb = 5  # lambda: the number of children\n",
+    "rho = 1  # rho: number of parents per child\n",
+    "selection_operator = '+'\n",
+    "\n",
+    "d = 2    # number of dimension of the solution space\n",
+    "\n",
+    "num_gen = 10\n",
+    "\n",
+    "tau = 1./math.sqrt(2.*d)          # self-adaptation learning rate\n",
+    "\n",
+    "# Init the population ##########################\n",
+    "\n",
+    "# \"pop\" array layout:\n",
+    "# - the first mu lines contain parents\n",
+    "# - the next lambda lines contain children\n",
+    "# - the first column contains the individual's strategy (sigma)\n",
+    "# - the last column contains the individual's assess (f(x))\n",
+    "# - the other columns contain the individual value (x)\n",
+    "\n",
+    "pop = np.full([mu+lmb, d+2], np.nan)\n",
+    "pop[:mu, 0] = 1.                                       # init the parents strategy to 1.0\n",
+    "pop[:mu, 1:-1] = np.random.normal(0., 1., size=[mu,d]) # init the parents value\n",
+    "pop[:mu, -1] = func(pop[:mu, 1:-1].T)                  # evaluate parents\n",
+    "print(\"Initial population:\\n\", pop)\n",
+    "\n",
+    "## Sort parents\n",
+    "#pop = pop[pop[:,-1].argsort()]\n",
+    "#print(pop)\n",
+    "\n",
+    "for gen in range(num_gen):\n",
+    "    # Make children ################################\n",
+    "    if rho == 1:\n",
+    "        # Each child is made from one randomly selected parent\n",
+    "        pop[mu:,:] = pop[np.random.randint(mu, size=lmb)]\n",
+    "    elif rho == mu:\n",
+    "        # Recombine all parents for each child\n",
+    "        raise NotImplemented() # TODO\n",
+    "    elif 1 < rho < mu:\n",
+    "        # Recombine rho randomly selected parents for each child\n",
+    "        raise NotImplemented() # TODO\n",
+    "    else:\n",
+    "        raise ValueError()\n",
+    "\n",
+    "    pop[mu:,-1] = np.nan\n",
+    "    #print(\"Children:\\n\", pop)\n",
+    "\n",
+    "    # Mutate children's sigma ######################\n",
+    "    pop[mu:,0] = pop[mu:,0] * np.exp(tau * np.random.normal(size=lmb))\n",
+    "    #print(\"Mutated children (sigma):\\n\", pop)\n",
+    "\n",
+    "    # Mutate children's value ######################\n",
+    "    pop[mu:,1:-1] = pop[mu:,1:-1] + pop[mu:,1:-1] * np.random.normal(size=[lmb,d])\n",
+    "    #print(\"Mutated children (value):\\n\", pop)\n",
+    "\n",
+    "    # Evaluate children ############################\n",
+    "    pop[mu:, -1] = func(pop[mu:, 1:-1].T)\n",
+    "    #print(\"Evaluated children:\\n\", pop)\n",
+    "\n",
+    "    # Select the best individuals ##################\n",
+    "    if selection_operator == '+':\n",
+    "        # *plus-selection* operator\n",
+    "        pop = pop[pop[:,-1].argsort()]\n",
+    "    elif selection_operator == ',':\n",
+    "        # *comma-selection* operator\n",
+    "        pop[:lmb,:] = pop[pop[mu:,-1].argsort()]   # TODO: check this...\n",
+    "    else:\n",
+    "        raise ValueError()\n",
+    "        \n",
+    "    pop[mu:, :] = np.nan \n",
+    "\n",
+    "    #print(\"Selected individuals for the next generation:\\n\", pop)\n",
+    "\n",
+    "print(\"Result:\\n\", pop[:mu, :])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Some explanations about $\\sigma$ and $\\tau$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tau"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import random\n",
     "\n",
-    "MU = 3                    # number of parents\n",
-    "LAMBDA = 12               # number of offspring\n",
+    "sigma_list = [1.]\n",
     "\n",
-    "X_INIT = np.ones(2)       # initial parent vector\n",
-    "SIGMA_INIT = 1            # initial global mutation strength sigma\n",
+    "for i in range(1000):\n",
+    "    sigma_list.append(sigma_list[-1] * math.exp(tau * random.normalvariate(0., 1.)))         # mutate sigma\n",
     "\n",
-    "SIGMA_MIN = 1e-10         # ES stops when sigma is smaller than sigma_min\n",
+    "#sigma = sigma * exp(tau*randn)         # mutate sigma\n",
     "\n",
-    "###########################################################\n",
+    "plt.loglog(sigma_list);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(-4, 4, 100)\n",
+    "y1 = np.exp(1./math.sqrt(1.*d) * x)\n",
+    "y2 = np.exp(1./math.sqrt(2.*d) * x)\n",
+    "y3 = np.exp(1./math.sqrt(3.*d) * x)\n",
+    "y4 = np.exp(1./(2.*d) * x)\n",
     "\n",
-    "# Function to be optimized (sphere test function as an example)\n",
-    "# individual: the individual to evaluate\n",
+    "plt.plot(x, y1, label=\"tau1\")\n",
+    "plt.plot(x, y2, label=\"tau2\")\n",
+    "plt.plot(x, y3, label=\"tau3\")\n",
+    "plt.plot(x, y4, label=\"tau4\")\n",
     "\n",
-    "def fitness(individual):\n",
-    "    return sum(individual.x**2)\n",
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tau1 = 1./math.sqrt(1.*d)\n",
+    "tau2 = 1./math.sqrt(2.*d)\n",
+    "tau3 = 1./math.sqrt(3.*d)\n",
+    "tau4 = 1./(2.*d)\n",
     "\n",
-    "###########################################################\n",
+    "x1 = np.exp(tau1 * np.random.normal(size=[100000]))\n",
+    "x2 = np.exp(tau2 * np.random.normal(size=[100000]))\n",
+    "x3 = np.exp(tau3 * np.random.normal(size=[100000]))\n",
+    "x4 = np.exp(tau4 * np.random.normal(size=[100000]))\n",
     "\n",
-    "# The individual class\n",
-    "# x: the individual's value\n",
-    "# sigma: the individual's sigma\n",
-    "class Individual():\n",
-    "    def __init__(self, x, sigma):\n",
-    "        self.x = x\n",
-    "        self.sigma = sigma\n",
-    "        self.cost = fitness(self)\n",
+    "bins = np.linspace(0, 10, 100)\n",
+    "plt.hist(x1, bins=bins, alpha=0.5, label=\"tau1\", lw=2, histtype='step')\n",
+    "plt.hist(x2, bins=bins, alpha=0.5, label=\"tau2\", lw=2, histtype='step')\n",
+    "plt.hist(x3, bins=bins, alpha=0.5, label=\"tau3\", lw=2, histtype='step')\n",
+    "plt.hist(x4, bins=bins, alpha=0.5, label=\"tau4\", lw=2, histtype='step')\n",
     "\n",
-    "    def __str__(self):\n",
-    "        return \"{0} {1} {2}\".format(self.x, self.sigma, self.cost)\n",
+    "plt.xlim(-0.25, 7)\n",
     "\n",
-    "###########################################################\n",
+    "plt.axvline(1, color='k', linestyle='dotted')\n",
     "\n",
-    "# This sorts the population according to the individuals' fitnesses\n",
-    "# pop: a list of Individual objects\n",
-    "def select_individuals(pop):\n",
-    "    pop.sort(key=lambda indiv: indiv.cost, reverse=False)\n",
-    "    return pop[:MU]\n",
-    "\n",
-    "# This performs intermediate (multi-) recombination\n",
-    "# parents: a list of Individual objects\n",
-    "def recombine_individuals(parents):\n",
-    "    parents_y = np.array([indiv.x for indiv in parents])\n",
-    "    parents_sigma = np.array([indiv.sigma for indiv in parents])\n",
-    "    recombinant = Individual(parents_y.mean(axis=0), parents_sigma.mean())\n",
-    "    return recombinant\n",
-    "\n",
-    "###########################################################\n",
-    "\n",
-    "# Initialization\n",
-    "n = X_INIT.shape[0]         # determine search space dimensionality n   \n",
-    "tau = 1. / math.sqrt(2.*n)  # self-adaptation learning rate\n",
-    "\n",
-    "# Initializing individual population\n",
-    "parent_pop = [Individual(X_INIT, SIGMA_INIT) for i in range(MU)]\n",
-    "\n",
-    "# Evolution loop of the (mu/mu_I, lambda)-sigma-SA-ES\n",
-    "while parent_pop[0].sigma > SIGMA_MIN:\n",
-    "    offspring_pop = []\n",
-    "    recombinant = recombine_individuals(parent_pop) # TODO: BUG ? this statement may be in the next line\n",
-    "    for i in range(1, LAMBDA):\n",
-    "        offspring_sigma = recombinant.sigma * math.exp(tau * random.normalvariate(0,1))\n",
-    "        offspring_y = recombinant.x + offspring_sigma * np.random.normal(size=n)\n",
-    "        offspring = Individual(offspring_y, offspring_sigma)\n",
-    "        offspring_pop.append(offspring)\n",
-    "    parent_pop = select_individuals(offspring_pop)\n",
-    "    print(parent_pop[0])\n",
-    "\n",
-    "# Remark: Final approximation of the optimizer is in \"parent_pop[0].x\"\n",
-    "#         corresponding fitness is in \"parent_pop[0].cost\" and the final \n",
-    "#         mutation strength is in \"parent_pop[0].sigma\""
+    "plt.legend();"
    ]
   },
   {
