Fix some mistakes.

--- a/ai_optimization_saes_en.ipynb
+++ b/ai_optimization_saes_en.ipynb
@@ -187,9 +187,9 @@
     "http://www.scholarpedia.org/article/Evolution_Strategies\n",
     "\"\"\"\n",
     "\n",
-    "mu = 3   # mu: the number of parents\n",
-    "lmb = 5  # lambda: the number of children\n",
-    "rho = 1  # rho: number of parents per child\n",
+    "mu = 3    # mu: the number of parents\n",
+    "lmb = 12  # lambda: the number of children\n",
+    "rho = 1   # rho: number of parents per child\n",
     "selection_operator = '+'\n",
     "\n",
     "d = 2    # number of dimension of the solution space\n",
@@ -483,7 +483,7 @@
     "func.reset_eval_counters()\n",
     "func.reset_eval_logs()\n",
     "\n",
-    "res = saes.minimize(func)\n",
+    "res = saes.minimize(func, init_pop_mu=0., init_pop_sigma=1.)\n",
     "\n",
     "func.do_eval_logs = False\n",
     "\n",
@@ -542,7 +542,7 @@
     "    func.reset_eval_counters()\n",
     "    func.reset_eval_logs()\n",
     "\n",
-    "    res = saes.minimize(func)\n",
+    "    res = saes.minimize(func, init_pop_mu=0., init_pop_sigma=1., lmb=6)\n",
     "\n",
     "    func.do_eval_logs = False\n",
     "\n",
