Add pseude code.

--- a/ai_optimization_differential_evolution_en.ipynb
+++ b/ai_optimization_differential_evolution_en.ipynb
@@ -51,6 +51,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Simplified notations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FOREACH generation\n",
+    "\n",
+    "$\\quad$ FOREACH individual $i$ (a solution vector) of the population (a set)\n",
+    "\n",
+    "$\\quad\\quad$ 1. **MUTATION**: \n",
+    "\n",
+    "$\\quad\\quad\\quad$ 1.1 Randomly choose 3 different individuals $\\boldsymbol{x}_{r1}$, $\\boldsymbol{x}_{r2}$ and $\\boldsymbol{x}_{r3}$\n",
+    "\n",
+    "$\\quad\\quad\\quad\\quad$ $\\boldsymbol{x}_{r2}$ and $\\boldsymbol{x}_{r3}$ are used to automatically define the direction and the amplitude of the mutation\n",
+    "\n",
+    "$\\quad\\quad\\quad\\quad$ (i.e. the search amplitude and direction)\n",
+    "\n",
+    "$\\quad\\quad\\quad$ 1.2 Compute mutant $\\boldsymbol{v}_{i} \\leftarrow \\boldsymbol{x}_{r1} + F . (\\boldsymbol{x}_{r2} - \\boldsymbol{x}_{r3})$\n",
+    "\n",
+    "$\\quad\\quad$ 2. **CROSSOVER**:\n",
+    "\n",
+    "$\\quad\\quad\\quad$ Compute the \"test\" individual $\\boldsymbol{u}_{i}$ randomly taking each of its (vector) components in either $\\boldsymbol{x}_i$ or $\\boldsymbol{v}_i$\n",
+    "\n",
+    "$\\quad\\quad$ 3. **SELECTION**:\n",
+    "\n",
+    "$\\quad\\quad\\quad$ The test individual $\\boldsymbol{u}_{i}$ replace $\\boldsymbol{x}_{i}$ in the next generation if it has a better score."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Differential evolution consists of three main steps:\n",
     "1. mutation\n",
     "2. crossover\n",
