--- a/ai_optimization_differential_evolution_fr.ipynb
+++ b/ai_optimization_differential_evolution_fr.ipynb
@@ -56,27 +56,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "À chaque génération,\n",
+    "À chaque génération\n",
     "\n",
     "$\\quad$ Pour tous les individus $i$ de la population\n",
     "\n",
     "$\\quad\\quad$ 1. **MUTATION**: \n",
     "\n",
-    "$\\quad\\quad\\quad$ 1.1 on choisi 3 individus différents au hasard $\\boldsymbol{x}_{r1}$, $\\boldsymbol{x}_{r2}$ et $\\boldsymbol{x}_{r3}$\n",
+    "$\\quad\\quad\\quad$ 1.1 On choisi 3 individus différents au hasard $\\boldsymbol{x}_{r1}$, $\\boldsymbol{x}_{r2}$ et $\\boldsymbol{x}_{r3}$\n",
     "\n",
     "$\\quad\\quad\\quad\\quad$ $\\boldsymbol{x}_{r2}$ et $\\boldsymbol{x}_{r3}$ vont permettre de déterminer automatiquement la direction et l'amplitude le la mutation\n",
     "\n",
     "$\\quad\\quad\\quad\\quad$ (i.e. la direction de recherche et son amplitude)\n",
     "\n",
-    "$\\quad\\quad\\quad$ 1.2 on calcule un mutant $\\boldsymbol{v}_{i} \\leftarrow \\boldsymbol{x}_{r1} + F . (\\boldsymbol{x}_{r2} - \\boldsymbol{x}_{r3})$\n",
+    "$\\quad\\quad\\quad$ 1.2 On calcule un mutant $\\boldsymbol{v}_{i} \\leftarrow \\boldsymbol{x}_{r1} + F . (\\boldsymbol{x}_{r2} - \\boldsymbol{x}_{r3})$\n",
     "\n",
     "$\\quad\\quad$ 2. **CROISEMENT**:\n",
     "\n",
-    "$\\quad\\quad\\quad$ on crée un individu \"test\" $\\boldsymbol{u}_{i}$ dont les composantes sont aléatoirement prises soit dans $\\boldsymbol{x}_i$ soit dans $\\boldsymbol{v}_i$\n",
+    "$\\quad\\quad\\quad$ On crée un individu \"test\" $\\boldsymbol{u}_{i}$ dont les composantes sont aléatoirement prises soit dans $\\boldsymbol{x}_i$ soit dans $\\boldsymbol{v}_i$\n",
     "\n",
     "$\\quad\\quad$ 3. **SELECTION**:\n",
     "\n",
-    "$\\quad\\quad\\quad$ si cet individu test $\\boldsymbol{u}_{i}$ est meilleur que $\\boldsymbol{x}_{i}$, il le remplace à la génération suivante."
+    "$\\quad\\quad\\quad$ Si cet individu test $\\boldsymbol{u}_{i}$ est meilleur que $\\boldsymbol{x}_{i}$, il le remplace à la génération suivante."
    ]
   },
   {
@@ -172,7 +172,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "tags": [
      "hide"
     ]
