--- a/ai_optimization_saes_en.ipynb
+++ b/ai_optimization_saes_en.ipynb
@@ -334,16 +334,16 @@
     "x4 = np.exp(tau4 * np.random.normal(size=[100000]))\n",
     "\n",
     "bins = np.linspace(0, 10, 100)\n",
-    "plt.hist(x1, bins=bins, alpha=0.5, label=\"tau1\", lw=2, histtype='step')\n",
-    "plt.hist(x2, bins=bins, alpha=0.5, label=\"tau2\", lw=2, histtype='step')\n",
-    "plt.hist(x3, bins=bins, alpha=0.5, label=\"tau3\", lw=2, histtype='step')\n",
-    "plt.hist(x4, bins=bins, alpha=0.5, label=\"tau4\", lw=2, histtype='step')\n",
+    "plt.hist(x1, bins=bins, alpha=0.5, label=r\"$\\exp\\left(\\frac{1}{\\sqrt{d}} \\mathcal{N}(0,1)\\right)$\", lw=2, histtype='step')\n",
+    "plt.hist(x2, bins=bins, alpha=0.5, label=r\"$\\exp\\left(\\frac{1}{\\sqrt{2d}} \\mathcal{N}(0,1)\\right)$\", lw=2, histtype='step')\n",
+    "plt.hist(x3, bins=bins, alpha=0.5, label=r\"$\\exp\\left(\\frac{1}{\\sqrt{3d}} \\mathcal{N}(0,1)\\right)$\", lw=2, histtype='step')\n",
+    "plt.hist(x4, bins=bins, alpha=0.5, label=r\"$\\exp\\left(\\frac{1}{2d} \\mathcal{N}(0,1)\\right)$\", lw=2, histtype='step')\n",
     "\n",
     "plt.xlim(-0.25, 7)\n",
     "\n",
     "plt.axvline(1, color='k', linestyle='dotted')\n",
     "\n",
-    "plt.legend();"
+    "plt.legend(fontsize='x-large');"
    ]
   },
   {
